kubernetes/apps/networking/essentials/ingresses/minio-service.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: networking
spec:
  type: ExternalName
  ports:
    - port: 9768
      targetPort: 9768
      protocol: TCP


  externalName: 192.168.1.241
