kubernetes/apps/networking/essentials/ingresses/minio-istio-config.yaml
---
# ServiceEntry for external MinIO server
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: minio-external
  namespace: networking
spec:
  hosts:
    - minio-external.local
  ports:
    - number: 9769
      name: minio-console
      protocol: HTTP
    - number: 9768
      name: minio-api
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.1.241
---
# DestinationRule for MinIO to handle traffic properly
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-external
  namespace: networking
spec:
  host: minio-external.local
  trafficPolicy:
    tls:
      mode: DISABLE
