kubernetes/apps/networking/essentials/ingresses/minio-service-virtualservice.yaml
---
# VirtualService for internal MinIO service routing
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-service
  namespace: networking
spec:
  hosts:
    - minio-service.networking.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9768
