kubernetes/apps/networking/essentials/ingresses/minio-virtualservices.yaml
---
# VirtualService for MinIO Console (external access)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-ui
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  hosts:
    - minio.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9769
      headers:
        request:
          set:
            X-Forwarded-Proto: https
            X-Forwarded-Host: minio.${SECRET_DOMAIN}
            Host: minio.${SECRET_DOMAIN}
---
# VirtualService for MinIO S3 API (external access)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-s3-external
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  hosts:
    - s3.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio-external.local
            port:
              number: 9768
      headers:
        request:
          set:
            X-Forwarded-Proto: https
            X-Forwarded-Host: s3.${SECRET_DOMAIN}
            Host: s3.${SECRET_DOMAIN}
