kubernetes/apps/networking/essentials/ingresses/pve-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pve
  namespace: networking
spec:
  hosts:
    - pve.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: pve.networking.svc.cluster.local
            port:
              number: 8006
